Background image fix for results info icon on mobile devices.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -175,6 +175,7 @@ footer.ui-footer {
 
 #list .noresults {
   color: #fff;
+  background-image: url(images/icons-18-black.png) !important;
   text-align: center;
 }
 
